hystrix: 添加turbine模块; ribbon: 添加自定义组件MyPing、MyRule

--- a/ribbon/ribbon-eureka/src/main/resources/application.yml
+++ b/ribbon/ribbon-eureka/src/main/resources/application.yml
@@ -10,6 +10,10 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka
+#eureka-client:
+#  ribbon:
+#    NFLoadBalancerRuleClassName: name.guolanren.component.MyRule
+#    NFLoadBalancerPingClassName: name.guolanren.component.MyPing
 management:
   endpoint:
     shutdown:
