--- a/eureka/eureka-client-ha/src/main/resources/application.yml
+++ b/eureka/eureka-client-ha/src/main/resources/application.yml
@@ -6,7 +6,8 @@ server:
 eureka:
   instance:
     instanceId: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance-id:${server.port}}
-    hostname: localhost
+    hostname: ${spring.cloud.client.hostname}
+    prefer-ip-address: true
   client:
     serviceUrl:
       defaultZone: http://peer1:8761/eureka,http://peer2:8762/eureka,http://peer3:8763/eureka
