--- a/eureka/eureka-client-health-check/src/main/resources/application.yml
+++ b/eureka/eureka-client-health-check/src/main/resources/application.yml
@@ -6,8 +6,11 @@ server:
 eureka:
   instance:
     instanceId: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance-id:${server.port}}
-    hostname: localhost
+    hostname: ${spring.cloud.client.hostname}
+    prefer-ip-address: true
   client:
+    healthcheck:
+      enabled: true
     instanceInfoReplicationIntervalSeconds: 10
     serviceUrl:
       defaultZone: http://localhost:8761/eureka
