--- a/eureka/eureka-client/src/main/resources/application.yml
+++ b/eureka/eureka-client/src/main/resources/application.yml
@@ -8,7 +8,8 @@ server:
 eureka:
   instance:
     instanceId: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance-id:${server.port}}
-    hostname: localhost
+    hostname: ${spring.cloud.client.hostname}
+    prefer-ip-address: true
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka
@@ -31,7 +32,8 @@ server:
 eureka:
   instance:
     instanceId: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance-id:${server.port}}
-    hostname: localhost
+    hostname: ${spring.cloud.client.hostname}
+    prefer-ip-address: true
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka
