--- a/eureka/eureka-server-ha/src/main/resources/application.yml
+++ b/eureka/eureka-server-ha/src/main/resources/application.yml
@@ -11,6 +11,7 @@ eureka:
   instance:
     instanceId: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance-id:${server.port}}
     hostname: peer1
+    prefer-ip-address: true
   client:
     serviceUrl:
       defaultZone: http://peer2:8762/eureka/,http://peer3:8763/eureka/
@@ -28,6 +29,7 @@ eureka:
   instance:
     instanceId: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance-id:${server.port}}
     hostname: peer2
+    prefer-ip-address: true
   client:
     serviceUrl:
       defaultZone: http://peer1:8761/eureka/,http://peer3:8763/eureka/
@@ -45,6 +47,7 @@ eureka:
   instance:
     instanceId: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance-id:${server.port}}
     hostname: peer3
+    prefer-ip-address: true
   client:
     serviceUrl:
       defaultZone: http://peer1:8761/eureka/,http://peer2:8762/eureka/
