--- a/eureka/eureka-server/src/main/resources/application.yml
+++ b/eureka/eureka-server/src/main/resources/application.yml
@@ -9,7 +9,8 @@ eureka:
     enable-self-preservation: false
   instance:
     instanceId: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance-id:${server.port}}
-    hostname: localhost
+    hostname: ${spring.cloud.client.hostname}
+    prefer-ip-address: true
   client:
     registerWithEureka: false
     fetchRegistry: false
