--- a/feign/feign-hystrix/src/main/resources/application.yml
+++ b/feign/feign-hystrix/src/main/resources/application.yml
@@ -6,7 +6,8 @@ server:
 eureka:
   instance:
     instanceId: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance-id:${server.port}}
-    hostname: localhost
+    hostname: ${spring.cloud.client.hostname}
+    prefer-ip-address: true
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka
