--- a/hystrix/hystrix-turbine/src/main/resources/application.yml
+++ b/hystrix/hystrix-turbine/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: hystrix-turbine
 server:
-  port: 8771
+  port: 8765
 eureka:
   instance:
     instanceId: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance-id:${server.port}}
@@ -13,5 +13,5 @@ eureka:
       defaultZone: http://localhost:8761/eureka
 turbine:
   aggregator:
-    clusterConfig: HYSTRIX-DASHBOARD
-  appConfig: hystrix-dashboard
+    clusterConfig: HYSTRIX-EUREKA
+  appConfig: hystrix-eureka
