--- a/config/config-server/src/main/resources/bootstrap.yml
+++ b/config/config-server/src/main/resources/bootstrap.yml
@@ -1,3 +1,12 @@
+eureka:
+  instance:
+    instanceId: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance-id:${server.port}}
+    hostname: ${spring.cloud.client.hostname}
+    prefer-ip-address: true
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
+
 server:
   port: 8700
 spring:
