--- a/eureka/eureka-client/pom.xml
+++ b/eureka/eureka-client/pom.xml
@@ -3,9 +3,6 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>eureka-client</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0.0</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -13,6 +10,10 @@
         <version>2.1.1.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
+    <groupId>name.guolanren</groupId>
+    <artifactId>eureka-client</artifactId>
+    <version>1.0.0</version>
 
     <properties>
         <java.version>1.8</java.version>
