--- a/gateway/gateway-proxy-route/src/main/resources/application.yml
+++ b/gateway/gateway-proxy-route/src/main/resources/application.yml
@@ -1,12 +1,13 @@
 spring:
   application:
-    name: gateway-predicate
+    name: gateway-proxy-route
 server:
   port: 9080
 eureka:
   instance:
-    instanceId: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance-id:${server.port}}
-    hostname: ${spring.cloud.client.hostname}
+#    instanceId: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance-id:${server.port}}
+    instanceId: ${spring.cloud.client.ip-address}:${server.port}
+    hostname: ${spring.cloud.client.ip-address}
     prefer-ip-address: true
   client:
     serviceUrl:
