--- a/eureka/eureka-client/src/main/resources/application.yml
+++ b/eureka/eureka-client/src/main/resources/application.yml
@@ -7,8 +7,9 @@ server:
   port: 9090
 eureka:
   instance:
-    instanceId: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance-id:${server.port}}
-    hostname: ${spring.cloud.client.hostname}
+#    instanceId: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance-id:${server.port}}
+    instanceId: ${spring.cloud.client.ip-address}:${server.port}
+    hostname: ${spring.cloud.client.ip-address}
     prefer-ip-address: true
   client:
     serviceUrl:
@@ -31,8 +32,9 @@ server:
   port: 9091
 eureka:
   instance:
-    instanceId: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance-id:${server.port}}
-    hostname: ${spring.cloud.client.hostname}
+#    instanceId: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance-id:${server.port}}
+    instanceId: ${spring.cloud.client.ip-address}:${server.port}
+    hostname: ${spring.cloud.client.ip-address}
     prefer-ip-address: true
   client:
     serviceUrl:
