--- a/gateway/gateway-filter/pom.xml
+++ b/gateway/gateway-filter/pom.xml
@@ -12,7 +12,7 @@
     </parent>
 
     <groupId>name.guolanren</groupId>
-    <artifactId>gateway-predicate</artifactId>
+    <artifactId>gateway-filter</artifactId>
     <version>1.0.0</version>
 
     <properties>
