--- a/gateway/gateway-filter/src/main/resources/application.yml
+++ b/gateway/gateway-filter/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 spring:
   application:
-    name: gateway-predicate
+    name: gateway-filter
+
 server:
   port: 9080
 eureka:
@@ -18,17 +19,23 @@ management:
       exposure:
         include: ["health", "info", "hystrix.stream", "routes", "filters"]
 
+
 spring:
   cloud:
     gateway:
+      # 默认过滤器
+      default-filters:
+      - AddResponseHeader=X-Response-Default-Foo, Default-Bar
+      - PrefixPath=/httpbin
       routes:
-      - id: after
+      - id: add_request_header
         uri: lb://eureka-client
-        predicates:
-        - Path=/hello
-        - After=2007-12-03T10:15:30+01:00[Europe/Paris]
-      - id: before
-        uri: lb://eureka-client
-        predicates:
-        - Path=/hell
-        - Before=2007-12-03T10:15:30+01:00[Europe/Paris]
+        predicate:
+        - Path=/hello/{who}
+        filters:
+        - AddRequestHeader=WHO, {who}
+      filter:
+        remove-hop-by-hop:
+          headers: Connection,Keep-Alive,Proxy-Authenticate,Proxy-Authorization,TE,Trailer,Transfer-Encoding,Upgrade
+        secure-headers:
+          disable: frame-options,download-options
