--- a/hystrix/hystrix-dashboard/src/main/resources/application.yml
+++ b/hystrix/hystrix-dashboard/src/main/resources/application.yml
@@ -5,8 +5,9 @@ server:
   port: 8764
 eureka:
   instance:
-    instanceId: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance-id:${server.port}}
-    hostname: ${spring.cloud.client.hostname}
+#    instanceId: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance-id:${server.port}}
+    instanceId: ${spring.cloud.client.ip-address}:${server.port}
+    hostname: ${spring.cloud.client.ip-address}
     prefer-ip-address: true
   client:
     serviceUrl:
