--- a/gateway/gateway-filter/src/main/resources/application.yml
+++ b/gateway/gateway-filter/src/main/resources/application.yml
@@ -1,26 +1,6 @@
 spring:
   application:
     name: gateway-filter
-
-server:
-  port: 9080
-eureka:
-  instance:
-#    instanceId: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance-id:${server.port}}
-    instanceId: ${spring.cloud.client.ip-address}:${server.port}
-    hostname: ${spring.cloud.client.ip-address}
-    prefer-ip-address: true
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka
-management:
-  endpoints:
-    web:
-      exposure:
-        include: ["health", "info", "hystrix.stream", "routes", "filters"]
-
-
-spring:
   cloud:
     gateway:
       # 默认过滤器
@@ -39,3 +19,20 @@ spring:
           headers: Connection,Keep-Alive,Proxy-Authenticate,Proxy-Authorization,TE,Trailer,Transfer-Encoding,Upgrade
         secure-headers:
           disable: frame-options,download-options
+
+server:
+  port: 9080
+eureka:
+  instance:
+#    instanceId: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance-id:${server.port}}
+    instanceId: ${spring.cloud.client.ip-address}:${server.port}
+    hostname: ${spring.cloud.client.ip-address}
+    prefer-ip-address: true
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
+management:
+  endpoints:
+    web:
+      exposure:
+        include: ["health", "info"]
