--- a/gateway/gateway-proxy-route/src/main/resources/application.yml
+++ b/gateway/gateway-proxy-route/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 spring:
   application:
     name: gateway-proxy-route
+
 server:
   port: 9080
 eureka:
@@ -16,4 +17,4 @@ management:
   endpoints:
     web:
       exposure:
-        include: ["health", "info", "hystrix.stream", "routes", "filters"]
+        include: ["health", "info"]
