--- a/ribbon/ribbon-single/src/main/resources/application.yml
+++ b/ribbon/ribbon-single/src/main/resources/application.yml
@@ -6,7 +6,7 @@ server:
 ribbon:
   eureka:
     enabled: false
-eureka-client:
+eureka-client-common:
   ribbon:
     listOfServers: http://localhost:9090,http://localhost:9091
 #    NFLoadBalancerRuleClassName: name.guolanren.component.MyRule
