spring boot admin模块: 添加Security的Server/Client; Server hystrix-dashboard
spring boot admin模块:
添加Security的Server/Client
Server2.0官方不支持hystrix-dashboard/turbine，使用@MartinDevillers的

--- a/admin/admin-server/admin-server-eureka-hystrix-dashboard/src/main/resources/application.yml
+++ b/admin/admin-server/admin-server-eureka-hystrix-dashboard/src/main/resources/application.yml
@@ -1,22 +1,13 @@
 spring:
   application:
-    name: admin-client-eureka
+    name: admin-server-eureka-hystrix-dashboard
 server:
-  port: 8788
-
+  port: 8787
 eureka:
   instance:
     instanceId: ${spring.cloud.client.ip-address}:${server.port}
     hostname: ${spring.cloud.client.ip-address}
     prefer-ip-address: true
-#    metadata-map:
-#      user.name: ${spring.security.user.name}
-#      user.password: ${spring.security.user.password}
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka
-management:
-  endpoints:
-    web:
-      exposure:
-        include: '*'
