--- a/zuul/zuul-retry-fallback/src/main/resources/application.yml
+++ b/zuul/zuul-retry-fallback/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 spring:
   application:
-    name: zuul-fallback
+    name: zuul-retry-fallback
 server:
   port: 8700
+
 eureka:
   instance:
-#    instanceId: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance-id:${server.port}}
     instanceId: ${spring.cloud.client.ip-address}:${server.port}
     hostname: ${spring.cloud.client.ip-address}
     prefer-ip-address: true
@@ -21,4 +21,10 @@ management:
 zuul:
   routes:
     non-exist: /non-exist/**
+ribbon:
+  connectTimeout: 500
+  readTimeout: 5000
+  maxAutoRetries: 1
+  maxAutoRetriesNextServer: 3
+  okToRetryOnAllOperations: true
 
