--- a/zuul/zuul-retry-fallback/pom.xml
+++ b/zuul/zuul-retry-fallback/pom.xml
@@ -12,7 +12,7 @@
     </parent>
 
     <groupId>name.guolanren</groupId>
-    <artifactId>zuul-fallback</artifactId>
+    <artifactId>zuul-retry-fallback</artifactId>
     <version>1.0.0</version>
 
     <properties>
@@ -29,6 +29,11 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
         </dependency>
     </dependencies>
 
