--- a/zuul/zuul-route/src/main/resources/application.yml
+++ b/zuul/zuul-route/src/main/resources/application.yml
@@ -5,7 +5,6 @@ server:
   port: 8700
 eureka:
   instance:
-#    instanceId: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance-id:${server.port}}
     instanceId: ${spring.cloud.client.ip-address}:${server.port}
     hostname: ${spring.cloud.client.ip-address}
     prefer-ip-address: true
@@ -25,9 +24,9 @@ zuul:
       url: http://localhost:9090/
       path: /ec1/**
     # Ribbon路由(RibbonRoutingFilter)
-    eureka-client: /ec2/**
+    eureka-client-common: /ec2/**
     ec2:
-      service-id: eureka-client
+      service-id: eureka-client-common
       path: /ec2/**
     # 转发路由(SendForwardFilter)
     ec3:
